--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
   <meta charset="utf-8">
+  <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+  <link rel="icon" href="./favicon.ico" type="image/x-icon">
   <title>Freundeskreis der Dorfkirche Alt-Staaken</title>
   <meta description="Homepage des Freundeskreises der Dorfkirche Alt-Staaken." />
   <link href="./resources/css/normalize.css" rel="stylesheet" />
@@ -66,21 +68,29 @@
         <a href="#">Konzertprogramm</a>
       </article>
       <h3>Die aktuelle Ausgabe der Wetterfahne</h3>
-      <a href="#">Wetterfahne xx</a>
-      <a href="#">Wetterfahnen-Archiv</a>
+      <div>
+        <a href="#">Wetterfahne xx</a>
+        <a href="#">Wetterfahnen-Archiv</a>
+      </div>
     </section>
     <section class="lage flex">
       <div class="txt-box">
         <address>
-        Evangelische Dorfkirche Alt-Staaken
-        Hauptstrasse 12 /
-        Ecke Nennhauser Damm 72
-        13591 Berlin
-        Tel. 030 3632603
+        <h5>Evangelische Dorfkirche Alt-Staaken</h5>
+        <p>Hauptstrasse 12 /
+        Ecke Nennhauser Damm 72</p>
+        <p>13591 Berlin</p>
+        <p>Tel. (030) 363 26 03</p>
       </address>
-        <p>
-          Verkehrsverbindungen: BUS M32 ab Rathaus Spandau bis Hauptstr. BUS M37 ab Rathaus Spandau bis Hahneberg BUS 149 ab Zoo bis Hahneberg BUS X49 ab S Messe Nord / ICC bis Hahneberg
-        </p>
+        <h5>
+          Verkehrsverbindungen
+        </h5>
+        <ul>
+          <li>BUS M32 ab Rathaus Spandau bis Hauptstr</li>
+          <li>BUS M37 ab Rathaus Spandau bis Hahneberg</li>
+          <li>BUS 149 ab Zoo bis Hahneberg</li>
+          <li>BUS X49 ab S Messe Nord / ICC bis Hahneberg</li>
+        </ul>
       </div>
       <div class="img.box">
         <img src="./resources/images/lageplan.jpeg" />
